--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "cli-server-manager",
-  "version": "1.0.0",
-  "description": "A tool for managing connections via ssh and sftp to your servers.",
-  "main": "ssh_server_manager.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BakxY/CLI-Server-Manager.git"
-  },
-  "author": "BakxY",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/BakxY/CLI-Server-Manager/issues"
-  },
-  "homepage": "https://github.com/BakxY/CLI-Server-Manager#readme",
-  "devDependencies": {
-    "@types/node": "^22.13.10",
-    "@types/node-fetch": "^2.6.12",
-    "esbuild": "^0.25.1",
-    "eslint": "^9.22.0",
-    "typescript": "^5.8.2"
-  }
+    "name": "cli-server-manager",
+    "version": "1.0.0",
+    "description": "A tool for managing connections via ssh and sftp to your servers.",
+    "main": "ssh_server_manager.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/BakxY/CLI-Server-Manager.git"
+    },
+    "author": "BakxY",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/BakxY/CLI-Server-Manager/issues"
+    },
+    "homepage": "https://github.com/BakxY/CLI-Server-Manager#readme",
+    "scripts": {
+        "clean": "shx rm -rf out",
+        "watch": "npm run build-prepare & tsc-watch -p ./",
+        "lint": "eslint src --ext ts",
+        "pretest": "npm run compile && npm run lint",
+        "esbuild-base": "npm run clean && esbuild ./src/ssh_server_manager.ts --bundle --outfile=out/ssh_server_manager.js --format=cjs --platform=node",
+        "debug-esbuild": "npm run clean && node --inspect-brk out/ssh_server_manager.js"
+    },
+    "devDependencies": {
+        "@types/node": "^22.13.10",
+        "@types/node-fetch": "^2.6.12",
+        "esbuild": "^0.25.1",
+        "eslint": "^9.22.0",
+        "typescript": "^5.8.2"
+    }
 }
