--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
         "build": "esbuild --bundle --platform=node --minify --format=cjs src/**/*.ts --outdir=out",
         "build-debug": "esbuild --bundle --platform=node --sourcemap --keep-names --format=cjs src/**/*.ts --outdir=out",
         "watch": "esbuild --bundle --platform=node --sourcemap --keep-names --watch --format=cjs src/**/*.ts --outdir=out",
+        "lint": "eslint src --ext ts",
         "exe": "node out/ssh_server_manager.js"
     },
     "devDependencies": {
         "@types/node": "^22.13.10",
         "@types/node-fetch": "^2.6.12",
+        "@typescript-eslint/eslint-plugin": "^8.26.1",
+        "@typescript-eslint/parser": "^8.26.1",
         "esbuild": "^0.25.1",
         "eslint": "^9.22.0",
         "typescript": "^5.8.2"
